#1 #3 #4 update portfolio, update picture, add azure certification

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <section class="py-10 md:py-16 px-4 sm:px-12 h-screen flex items-center justify-center">
       <div class="text-center">
         <div class="flex justify-center mb-16">
-          <img class="h-64 w-64 rounded-full grayscale contrast-125" src="./resources/portfoliophoto.jpg" alt="Image" />
+          <img class="h-64 w-64 rounded-full" src="./resources/portfoliophoto.jpg" alt="Image" />
         </div>
 
-        <h6 class="font-medium text-gray-600 text-lg md:text-2xl uppercase mb-8">Fouad Chaker</h6>
+        <h6 class="font-medium text-gray-600 text-lg md:text-2xl uppercase mb-8">Bouzebra Fouad Chaker</h6>
 
         <h1 class="font-normal text-gray-900 text-4xl md:text-7xl leading-none mb-8">Software Engineer</h1>
 
@@ -128,7 +128,7 @@
     </section>
 
     <section class="py-10 md:py-16">
-      <div class="container max-w-screen-xl mx-auto px-4">
+      <div class="container max-w-screen-xl mx-auto px-16">
         <div class="flex flex-col lg:flex-row justify-between">
           <div class="mb-10 lg:mb-0">
             <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Experience</h1>
@@ -138,16 +138,19 @@
             <div class="flex space-x-6">
               <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">01</h1>
 
-              <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
+              <span class="w-12 xl:w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">ERP Developer @Audaxis</h1>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">
+                  Java ERP Developer <a href="https://www.audaxis.com/" target="_blank" rel="noopener noreferrer">@Audaxis</a>
+                </h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base mb-3">2022 - Now</p>
                 <p class="font-normal text-gray-500 text-sm md:text-base">
                   My role is to maintain, develop new features and deliver updates via docker
                   <br class="hidden md:block" />
-                  swarm, kubernates and linux installations.
+                  swarm, kubernates and linux installations,
+                  for both <a href="https://www.audaxis.com/solutions/erp-open-source-apiz/" target="_blank" rel="noopener noreferrer"><b>APIZ</b></a> and <b>Compiere</b> ERP.
                 </p>
               </div>
             </div>
@@ -155,16 +158,16 @@
             <div class="flex space-x-6">
               <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">02</h1>
 
-              <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
+              <span class="w-12 xl:w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
                 <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Inventory management software</h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base mb-3">2019</p>
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  I developed an inventory management application for a client. That enhanced
+                  I developed an inventory management application That enhances business
                   <br class="hidden md:block" />
-                  multiple processes of the business based on simplicity, usability and efficiency.
+                  processes. Where I offered maintenance services for a number of clients.
                 </p>
               </div>
             </div>
@@ -175,15 +178,15 @@
 
     <section class="py-10 md:py-16">
       <div class="container max-w-screen-xl mx-auto px-4">
-        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-16">Education</h1>
+        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-16 mx-12">Education</h1>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">Bachelors degree</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4">Masters degree</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              2016 - 2019 <br />
-              I started Software Engineering. And covered topics such as algorithms and databases.
+              2016 - 2021 <br />
+              I completed my studies focused on software architecture, and quality assurance.
             </p>
 
             <div class="relative">
@@ -192,7 +195,7 @@
           </div>
 
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">ASP.NET microservices learning path</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4"><a href="https://www.pluralsight.com/paths/net-microservices" target="_blank">ASP.NET microservices learning path</a></h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
               2021 <br />
@@ -201,116 +204,116 @@
 
             <div class="relative">
               <a
-                href="https://www.pluralsight.com/paths/net-microservices"
+                href="https://app.pluralsight.com/profile/FouadChaker" target="_blank"
                 class="font-semibold text-gray-500 text-md relative z-10"
-                >Visit PLURALSIGHT</a
+                >Visit PLURALSIGHT profile</a
               >
             </div>
           </div>
 
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">Masters degree</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4">Azure Certification</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              2019 - 2021 <br />
-              I completed my studies focused on software architecture, and quality assurance.
+              2025 <br />
+              I have successfully earned the Microsoft Certified: Azure Fundamentals certification.
             </p>
 
             <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">University of Constantine 2</h6>
+              <a
+                href="https://learn.microsoft.com/en-us/users/bouzebrafouadchaker/credentials/certification/azure-fundamentals?tab=credentials-tab" target="_blank"
+                class="font-semibold text-gray-500 text-md relative z-10"
+                >Visit CREDENTIALS</a
+              >
             </div>
           </div>
+
         </div>
       </div>
     </section>
 
     <section class="py-10 md:py-16">
-      <div class="container max-w-screen-xl mx-auto px-4">
-        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Projects</h1>
+      <div class="container max-w-screen-xl mx-auto px-0">
+        <h1 class="pl-16 font-medium text-gray-700 text-3xl md:text-4xl mb-6">Projects</h1>
 
-        <p class="font-normal text-gray-500 text-xs md:text-base mb-20">Below is a summary of the side projects I worked on</p>
-
-        <div class="grid grid-flow-col justify-stretch lg:justify-between space-x-4">
-          <div class="space-y-8 md:space-y-16 mb-16 md:mb-0">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Name</h6>
-
-            <p class="font-semibold text-gray-600 text-base">
-              <a href="https://youtu.be/F9M9cRdGHr4">
-                TahwissaDZ <br class="block sm:hidden" />
-                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Mobile app</span>
-              </a>
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              <a href="https://youtu.be/RWiWjvG5Li0">
-                Chat system <br class="block sm:hidden" />
-                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Web app</span>
-              </a>
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              <a href="https://youtu.be/dlbnGp4iVvY">
-                Inventory management <br class="block sm:hidden" />
-                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Desktop app</span>
-              </a>
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              <a href="https://fouadchaker.github.io/goby-clone/">
-                Goby website clone <br class="block sm:hidden" />
-                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Web page</span>
-              </a>
-            </p>
-          </div>
-
-          <div class="space-y-8 md:space-y-16 mb-16 md:mb-0 hidden lg:block">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Description</h6>
-
-            <p class="font-normal text-gray-600 text-base">Application for sharing and exploring travel agency plans.</p>
-
-            <p class="font-normal text-gray-600 text-base">A messenger like app with a lobby for group conversations.</p>
-
-            <p class="font-normal text-gray-600 text-base">Software designed to streamline inventory management processes.</p>
-
-            <p class="font-normal text-gray-600 text-base">Enterprise landing page made to get familliar with TailwindCSS.</p>
-          </div>
-
-          <div class="space-y-8 md:space-y-16">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Frameworks</h6>
-
-            <p class="font-semibold text-gray-600 text-base">
-              Flutter <br class="block sm:hidden" />
-              <span class="hidden sm:inline">|</span> UI/UX design
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              ASP.NET core <br class="block sm:hidden" />
-              <span class="hidden sm:inline">|</span> SignalR | SQL Server
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              JavaFX <br class="block sm:hidden" />
-              <span class="hidden sm:inline">|</span> MySQL
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              TailwindCSS <br class="block sm:hidden" />
-              <span class="hidden sm:inline">|</span> Github actions
-            </p>
-          </div>
-        </div>
+        <p class="pl-16 font-normal text-gray-500 text-xs md:text-base mb-8">Below is a summary of the side projects I worked on</p>
+        
+        <table class="lg:pl-8 min-w-full table-auto border-separate border-spacing-x-8 border-spacing-y-8 md:border-spacing-y-16">
+          <thead class="mb-16">
+            <tr>
+              <th class="text-left font-medium text-gray-400 text-base uppercase">Name</th>
+              <th class="text-left font-medium text-gray-400 text-base uppercase">Description</th>
+              <th class="text-left font-medium text-gray-400 text-base uppercase">Frameworks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="cursor-pointer" onclick="window.open('https://youtu.be/F9M9cRdGHr4', '_blank')">
+              <td class="text-gray-600 align-top">
+                <span class="font-semibold">TahwissaDZ</span><br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Mobile app</span>
+              </td>
+              <td class="text-gray-600 align-top">
+                Application for sharing and exploring travel agency plans.
+              </td>
+              <td class="text-gray-600 align-top">
+                Flutter <br class="block sm:hidden" />
+                <span class="hidden sm:inline">|</span> UI/UX design
+              </td>
+            </tr>
+            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://youtu.be/RWiWjvG5Li0', '_blank')">
+              <td class="text-gray-600 align-top">
+                <span class="font-semibold">Chat system</span><br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Web app</span>
+              </td>
+              <td class="text-gray-600 align-top">
+                A messenger-like app with a lobby for group conversations.
+              </td>
+              <td class="text-gray-600 align-top">
+                ASP.NET core <br class="block sm:hidden" />
+                <span class="hidden sm:inline">|</span> SignalR | SQL Server
+              </td>
+            </tr>
+            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://youtu.be/dlbnGp4iVvY', '_blank')">
+              <td class="text-gray-600 align-top">
+                <span class="font-semibold">Inventory management</span><br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Desktop app</span>
+              </td>
+              <td class="text-gray-600 align-top">
+                Software designed to streamline inventory management.
+              </td>
+              <td class="text-gray-600 align-top">
+                JavaFX <br class="block sm:hidden" />
+                <span class="hidden sm:inline">|</span> MySQL
+              </td>
+            </tr>
+            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://fouadchaker.github.io/goby-clone/', '_blank')">
+              <td class="text-gray-600 align-top">
+                <span class="font-semibold">Goby website clone</span><br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Web page</span>
+              </td>
+              <td class="text-gray-600 align-top">
+                Enterprise landing page made to get familiar with TailwindCSS.
+              </td>
+              <td class="text-gray-600 align-top">
+                TailwindCSS <br class="block sm:hidden" />
+                <span class="hidden sm:inline">|</span> Github actions
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      
       </div>
     </section>
 
     <section class="py-10 md:py-16">
-      <div class="container max-w-screen-xl mx-auto px-4">
+      <div class="container max-w-screen-xl mx-auto px-16">
         <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Skills</h1>
 
         <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
           Here is a selection of the tools and technologies I utilise in my projects
         </p>
 
-        <div class="grid grid-cols-3 md:grid-cols-5 gap-16 lg:gap-32 place-items-stretch items-stretch content-center">
+        <div class="grid grid-cols-3 md:grid-cols-5 gap-16 lg:gap-24 xl:gap-32 place-items-stretch items-stretch content-center">
           <img class="brightness-0 opacity-30" src="./resources/net.png" title=".NET" alt=".NET" />
 
           <img class="brightness-0 opacity-30" src="./resources/spring.png" title="Spring" alt="Spring" />
