update Projects ux

--- a/index.html
+++ b/index.html
@@ -241,65 +241,65 @@
       <div class="container max-w-screen-xl mx-auto px-0">
         <h1 class="pl-16 font-medium text-gray-700 text-3xl md:text-4xl mb-6">Projects</h1>
 
-        <p class="pl-16 font-normal text-gray-500 text-xs md:text-base mb-8">Below is a summary of the side projects I worked on</p>
+        <p class="pl-16 font-normal text-gray-500 text-xs md:text-base mb-16">Below is a summary of the side projects I worked on</p>
         
-        <table class="lg:pl-8 min-w-full table-auto border-separate border-spacing-x-8 border-spacing-y-8 md:border-spacing-y-16">
-          <thead class="mb-16">
+        <table class="min-w-full table-auto border-collapse border-spacing-x-8 border-spacing-y-8 md:border-spacing-y-16">
+          <thead>
             <tr>
-              <th class="text-left font-medium text-gray-400 text-base uppercase">Name</th>
+              <th class="pl-8 lg:pl-16 py-4 md:py-8 text-left font-medium text-gray-400 text-base uppercase">Name</th>
               <th class="text-left font-medium text-gray-400 text-base uppercase">Description</th>
               <th class="text-left font-medium text-gray-400 text-base uppercase">Frameworks</th>
             </tr>
           </thead>
           <tbody>
-            <tr class="cursor-pointer" onclick="window.open('https://youtu.be/F9M9cRdGHr4', '_blank')">
-              <td class="text-gray-600 align-top">
+            <tr class="cursor-pointer hover:bg-gray-50 hover:rounded-md" onclick="window.open('https://youtu.be/F9M9cRdGHr4', '_blank')">
+              <td class="pl-8 lg:pl-16 py-4 md:py-8 text-gray-600 align-top">
                 <span class="font-semibold">TahwissaDZ</span><br class="block sm:hidden" />
                 <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Mobile app</span>
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 pr-8 text-gray-600 align-top">
                 Application for sharing and exploring travel agency plans.
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 text-gray-600 align-top">
                 Flutter <br class="block sm:hidden" />
                 <span class="hidden sm:inline">|</span> UI/UX design
               </td>
             </tr>
-            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://youtu.be/RWiWjvG5Li0', '_blank')">
-              <td class="text-gray-600 align-top">
+            <tr class="cursor-pointer hover:bg-gray-50 hover:rounded-md" onclick="window.open('https://youtu.be/RWiWjvG5Li0', '_blank')">
+              <td class="pl-8 lg:pl-16 py-4 md:py-8 text-gray-600 align-top">
                 <span class="font-semibold">Chat system</span><br class="block sm:hidden" />
                 <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Web app</span>
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 pr-8 text-gray-600 align-top">
                 A messenger-like app with a lobby for group conversations.
               </td>
-              <td class="text-gray-600 align-top">
-                ASP.NET core <br class="block sm:hidden" />
-                <span class="hidden sm:inline">|</span> SignalR | SQL Server
+              <td class="py-4 md:py-8 text-gray-600 align-top">
+                ASP.NET core <br class="block xl:hidden" />
+                <span class="hidden xl:inline">|</span> SignalR | SQL Server
               </td>
             </tr>
-            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://youtu.be/dlbnGp4iVvY', '_blank')">
-              <td class="text-gray-600 align-top">
+            <tr class="cursor-pointer hover:bg-gray-50 hover:rounded-md" onclick="window.open('https://youtu.be/dlbnGp4iVvY', '_blank')">
+              <td class="pl-8 lg:pl-16 pr-4 py-4 md:py-8 text-gray-600 align-top">
                 <span class="font-semibold">Inventory management</span><br class="block sm:hidden" />
                 <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Desktop app</span>
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 pr-8 text-gray-600 align-top">
                 Software designed to streamline inventory management.
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 text-gray-600 align-top">
                 JavaFX <br class="block sm:hidden" />
                 <span class="hidden sm:inline">|</span> MySQL
               </td>
             </tr>
-            <tr class="cursor-pointer hover:bg-gray-100" onclick="window.open('https://fouadchaker.github.io/goby-clone/', '_blank')">
-              <td class="text-gray-600 align-top">
+            <tr class="cursor-pointer hover:bg-gray-50 hover:rounded-md" onclick="window.open('https://fouadchaker.github.io/goby-clone/', '_blank')">
+              <td class="pl-8 lg:pl-16 py-4 md:py-8 text-gray-600 align-top">
                 <span class="font-semibold">Goby website clone</span><br class="block sm:hidden" />
                 <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Web page</span>
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 pr-8 text-gray-600 align-top">
                 Enterprise landing page made to get familiar with TailwindCSS.
               </td>
-              <td class="text-gray-600 align-top">
+              <td class="py-4 md:py-8 text-gray-600 align-top">
                 TailwindCSS <br class="block sm:hidden" />
                 <span class="hidden sm:inline">|</span> Github actions
               </td>
