--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <p class="font-normal text-gray-500 text-md">
               I strive for creating robust and scalable solutions. I leverage industry-standard tools, ranging from gitlab
-              piplines/github actions to docker and kubernates.
+              piplines/github actions to docker and Kubernetes.
             </p>
           </div>
 
@@ -152,9 +152,9 @@
 
                 <p class="font-normal text-gray-500 text-sm md:text-base mb-3">2022 - Now</p>
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  My role is to maintain, develop new features and deliver updates via docker
+                  My role is to maintain, develop new features and deliver updates via Docker
                   <br class="hidden md:block" />
-                  swarm, kubernates and linux installations,
+                  swarm, Kubernetes and linux installations,
                   for both <a href="https://www.audaxis.com/solutions/erp-open-source-apiz/" target="_blank" rel="noopener noreferrer"><b>APIZ</b></a> and <b>Compiere</b> ERP.
                 </p>
               </div>
@@ -333,7 +333,7 @@
 
           <img class="brightness-0 opacity-30" src="./resources/docker.png" title="Docker" alt="Docker" />
 
-          <img class="brightness-0 opacity-30" src="./resources/k8s.png" title="Kubernates" alt="Kubernates" />
+          <img class="brightness-0 opacity-30" src="./resources/k8s.png" title="Kubernetes" alt="Kubernetes" />
 
           <img class="brightness-0 opacity-30" src="./resources/linux.png" title="Linux" alt="Linux" />
 
