add gigafy project, open links in new tab

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <a
           href="./resources/cv-bouzebra.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
           class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-200"
           >Get my CV</a
         >
@@ -304,6 +306,19 @@
                 <span class="hidden sm:inline">|</span> Github actions
               </td>
             </tr>
+            <tr class="cursor-pointer hover:bg-gray-50 hover:rounded-md" onclick="window.open('https://gigafy.azurewebsites.net/', '_blank')">
+              <td class="pl-8 lg:pl-16 py-4 md:py-8 text-gray-600 align-top">
+                <span class="font-semibold">Gigafy</span><br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"><span class="hidden sm:inline">/</span> Web app</span>
+              </td>
+              <td class="py-4 md:py-8 pr-8 text-gray-600 align-top">
+                Survey and interest subscription for a roaming service.
+              </td>
+              <td class="py-4 md:py-8 text-gray-600 align-top">
+                Azure containers <br class="block xl:hidden" />
+                <span class="hidden xl:inline">|</span> Next.js | Shadcn/ui
+              </td>
+            </tr>
           </tbody>
         </table>
       
@@ -351,7 +366,7 @@
 
           <div class="flex items-center justify-center space-x-8">
             <a
-              href="https://x.com/FouadCkr"
+              href="https://x.com/FouadCkr" target="_blank"
               class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-200"
             >
               <svg
@@ -373,7 +388,7 @@
             </a>
 
             <a
-              href="https://github.com/FouadChaker"
+              href="https://github.com/FouadChaker" target="_blank"
               class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-200"
             >
               <svg
@@ -395,7 +410,7 @@
             </a>
 
             <a
-              href="mailto:haroun25fcb@outlook.com"
+              href="mailto:haroun25fcb@outlook.com" target="_blank"
               class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-200"
             >
               <svg
@@ -416,7 +431,7 @@
             </a>
 
             <a
-              href="https://www.facebook.com/profile.php?id=100068963709427"
+              href="https://www.linkedin.com/in/fouad-chaker-bouzebra/" target="_blank"
               class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-200"
             >
               <svg
@@ -429,30 +444,11 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="feather feather-facebook text-gray-500 hover:text-gray-700 transition ease-in-out duration-200"
+                class="feather feather-linkedin text-gray-500 hover:text-gray-700 transition ease-in-out duration-200"
               >
-                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-              </svg>
-            </a>
-
-            <a
-              class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-200"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="feather feather-instagram text-gray-500 hover:text-gray-700 transition ease-in-out duration-200"
-              >
-                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                <rect x="2" y="9" width="4" height="12" />
+                <circle cx="4" cy="4" r="2" />
               </svg>
             </a>
           </div>
